linked html file to main.py to recieve webcam input

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Pose Tester</title>
 </head>
 <body>
-    <h1>Webcam Test</h1>
+    <h1>POSE CAPTURE!!!!!!!!</h1>
 
     <video id="webcam" autoplay playsinline width="640" height="480"></video> 
     <script>
